# GPT-Supporter

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  README.md  build.sh  gunicorn_conf.py  local_Dockerfile  local_build.sh  prod_build.sh  pyproject.toml  requirements.txt
backend/chatrooms/: models.py  serializers.py  urls.py  views.py
backend/chatrooms/migrations/: 0001_initial.py  0002_chatroom_category.py  0003_chatroom_system_info_alter_chatroom_name.py  0004_rename_text_message_content_and_more.py  0005_alter_chatroom_system_info.py
backend/config/: asgi.py  authentication.py  settings.py  urls.py
backend/config/settings/: base.py  local.py  prod.py
backend/dialogues/: models.py
backend/dialogues/migrations/: 0001_initial.py  0002_alter_dialoguecontent_number_and_more.py
backend/gpt_sys_infos/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/gpt_sys_infos/migrations/: 0001_initial.py  0002_initial.py  0002_systeminfo_description.py  0003_alter_content_text_alter_systeminfo_major.py  0003_alter_systeminfo_major.py  0004_systeminfo_data_sequence.py  0005_alter_content_text_alter_refbook_author_and_more.py
backend/public_scripts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/public_scripts/migrations/: 0001_initial.py  0002_publicscript_user.py
backend/users/: models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_remove_refbook_system_info_and_more.py  0003_alter_user_email.py  (+1 more)
(+34 files in other folders)
