[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SonJinHYo <wlsgy95@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.8.0"
mysqlclient = "^2.2.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
openai = "^0.27.8"
django-environ = "^0.10.0"
django-cors-headers = "^4.2.0"
channels = {version = ">=4.0.0,<4.1.0", extras = ["daphne"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
